project/parser.output
State 2 conflicts: 17 shift/reduce, 8 reduce/reduce
State 8 conflicts: 1 shift/reduce
State 10 conflicts: 2 shift/reduce
State 11 conflicts: 2 shift/reduce
State 19 conflicts: 2 shift/reduce
State 20 conflicts: 1 shift/reduce
State 23 conflicts: 15 shift/reduce, 7 reduce/reduce
State 34 conflicts: 1 reduce/reduce
State 36 conflicts: 1 shift/reduce
State 37 conflicts: 1 shift/reduce
State 38 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 47 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 53 conflicts: 15 shift/reduce, 7 reduce/reduce
State 55 conflicts: 2 shift/reduce
State 56 conflicts: 2 shift/reduce
State 57 conflicts: 2 shift/reduce
State 58 conflicts: 2 shift/reduce
State 59 conflicts: 2 shift/reduce
State 60 conflicts: 2 shift/reduce
State 62 conflicts: 1 shift/reduce
State 63 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 75 conflicts: 1 shift/reduce
State 85 conflicts: 1 shift/reduce
State 86 conflicts: 2 shift/reduce
State 88 conflicts: 1 shift/reduce
State 89 conflicts: 1 shift/reduce
State 90 conflicts: 1 shift/reduce
State 92 conflicts: 1 shift/reduce
State 104 conflicts: 2 shift/reduce
State 105 conflicts: 2 shift/reduce
State 106 conflicts: 1 shift/reduce
State 111 conflicts: 1 shift/reduce
State 113 conflicts: 1 shift/reduce
State 115 conflicts: 1 shift/reduce
State 119 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 130 conflicts: 1 shift/reduce
State 136 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: START

    2 START: ε
    3      | START stmts
    4      | START ufunction
    5      | START error
    6      | START

    7 stmts: stmt ';' stmts
    8      | stmt ';'
    9      | flow stmts
   10      | flow

   11 stmt: declare
   12     | assignment
   13     | funcall
   14     | return
   15     | expr

   16 flow: whether
   17     | when
   18     | from

   19 declare: DATA_TYPE ID init

   20 init: ASSIGN expr
   21     | ε

   22 assignment: ID ASSIGN expr

   23 whether: WHETHER '[' condition ']' THEN ':' '{' stmts '}'
   24        | WHETHER '[' condition ']' THEN ':' '{' stmts '}' OTHERWISE ':' '{' stmts '}'

   25 when: WHEN '[' condition ']' '{' stmts '}'
   26     | WHEN '{' stmts '}' UNTIL '[' condition ']'

   27 from: FROM '[' declare TO expr STEP expr ']' '{' stmts '}'

   28 condition: expr CMP expr
   29          | condition AND condition
   30          | condition OR condition
   31          | NOT condition
   32          | '(' condition ')'
   33          | expr

   34 expr: expr PLUS expr
   35     | expr MINUS expr
   36     | expr MUL expr
   37     | expr DIV expr
   38     | expr POW expr
   39     | expr MOD expr
   40     | ABS expr ABS
   41     | MINUS expr
   42     | '(' expr ')'
   43     | value
   44     | funcall

   45 value: ε
   46      | NUM
   47      | BINARY
   48      | ROMAN
   49      | ID
   50      | STR
   51      | list

   52 list: '[' ']'
   53     | '[' explist ']'

   54 explist: expr
   55        | expr ',' explist

   56 symlist: ID
   57        | ID ',' symlist

   58 return: RETURN expr

   59 ufunction: DEFINE ID '(' symlist ')' '{' stmts '}'
   60          | DEFINE ID '(' ')' '{' stmts '}'

   61 funcall: ID '(' explist ')'
   62        | FUNC '(' explist ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 32 42 59 60 61 62
    ')' (41) 32 42 59 60 61 62
    ',' (44) 55 57
    ':' (58) 23 24
    ';' (59) 7 8
    '[' (91) 23 24 25 26 27 52 53
    ']' (93) 23 24 25 26 27 52 53
    '{' (123) 23 24 25 26 27 59 60
    '}' (125) 23 24 25 26 27 59 60
    error (256) 5
    STEP (258) 27
    TO (259) 27
    FROM (260) 27
    WHEN (261) 25 26
    OTHERWISE (262) 24
    WHETHER (263) 23 24
    RETURN (264) 58
    DEFINE (265) 59 60
    UNTIL (266) 26
    THEN (267) 23 24
    AND (268) 29
    OR (269) 30
    NOT (270) 31
    PLUS <op> (271) 34
    MINUS <op> (272) 35 41
    MUL <op> (273) 36
    DIV <op> (274) 37
    POW <op> (275) 38
    ASSIGN <op> (276) 20 22
    ABS <op> (277) 40
    MOD <op> (278) 39
    NUM <num> (279) 46
    BINARY <num> (280) 47
    ROMAN <num> (281) 48
    STR <st> (282) 50
    FUNC <fn> (283) 62
    DATA_TYPE <dt> (284) 19
    ID <s> (285) 19 22 49 56 57 59 60 61
    CMP <fn> (286) 28
    UMINUS (287)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    S (43)
        on left: 1
        on right: 0
    START <a> (44)
        on left: 2 3 4 5 6
        on right: 1 3 4 5 6
    stmts <a> (45)
        on left: 7 8 9 10
        on right: 3 7 9 23 24 25 26 27 59 60
    stmt <a> (46)
        on left: 11 12 13 14 15
        on right: 7 8
    flow <a> (47)
        on left: 16 17 18
        on right: 9 10
    declare <a> (48)
        on left: 19
        on right: 11 27
    init <a> (49)
        on left: 20 21
        on right: 19
    assignment <a> (50)
        on left: 22
        on right: 12
    whether <a> (51)
        on left: 23 24
        on right: 16
    when <a> (52)
        on left: 25 26
        on right: 17
    from <a> (53)
        on left: 27
        on right: 18
    condition <a> (54)
        on left: 28 29 30 31 32 33
        on right: 23 24 25 26 29 30 31 32
    expr <a> (55)
        on left: 34 35 36 37 38 39 40 41 42 43 44
        on right: 15 20 22 27 28 33 34 35 36 37 38 39 40 41 42 54 55 58
    value <a> (56)
        on left: 45 46 47 48 49 50 51
        on right: 43
    list <a> (57)
        on left: 52 53
        on right: 51
    explist <a> (58)
        on left: 54 55
        on right: 53 55 61 62
    symlist <sl> (59)
        on left: 56 57
        on right: 57 59
    return <a> (60)
        on left: 58
        on right: 14
    ufunction <a> (61)
        on left: 59 60
        on right: 4
    funcall <a> (62)
        on left: 61 62
        on right: 13 44


State 0

    0 $accept: • S $end

    $default  reduce using rule 2 (START)

    S      go to state 1
    START  go to state 2


State 1

    0 $accept: S • $end

    $end  shift, and go to state 3


State 2

    1 S: START •
    3 START: START • stmts
    4      | START • ufunction
    5      | START • error
    6      | START •

    error      shift, and go to state 4
    FROM       shift, and go to state 5
    WHEN       shift, and go to state 6
    WHETHER    shift, and go to state 7
    RETURN     shift, and go to state 8
    DEFINE     shift, and go to state 9
    MINUS      shift, and go to state 10
    ABS        shift, and go to state 11
    NUM        shift, and go to state 12
    BINARY     shift, and go to state 13
    ROMAN      shift, and go to state 14
    STR        shift, and go to state 15
    FUNC       shift, and go to state 16
    DATA_TYPE  shift, and go to state 17
    ID         shift, and go to state 18
    '['        shift, and go to state 19
    '('        shift, and go to state 20

    $end       reduce using rule 1 (S)
    $end       [reduce using rule 6 (START)]
    error      [reduce using rule 6 (START)]
    FROM       [reduce using rule 6 (START)]
    WHEN       [reduce using rule 6 (START)]
    WHETHER    [reduce using rule 6 (START)]
    RETURN     [reduce using rule 6 (START)]
    DEFINE     [reduce using rule 6 (START)]
    PLUS       reduce using rule 6 (START)
    PLUS       [reduce using rule 45 (value)]
    MINUS      [reduce using rule 6 (START)]
    MINUS      [reduce using rule 45 (value)]
    MUL        reduce using rule 6 (START)
    MUL        [reduce using rule 45 (value)]
    DIV        reduce using rule 6 (START)
    DIV        [reduce using rule 45 (value)]
    POW        reduce using rule 6 (START)
    POW        [reduce using rule 45 (value)]
    ABS        [reduce using rule 6 (START)]
    MOD        reduce using rule 6 (START)
    MOD        [reduce using rule 45 (value)]
    NUM        [reduce using rule 6 (START)]
    BINARY     [reduce using rule 6 (START)]
    ROMAN      [reduce using rule 6 (START)]
    STR        [reduce using rule 6 (START)]
    FUNC       [reduce using rule 6 (START)]
    DATA_TYPE  [reduce using rule 6 (START)]
    ID         [reduce using rule 6 (START)]
    ';'        reduce using rule 6 (START)
    ';'        [reduce using rule 45 (value)]
    '['        [reduce using rule 6 (START)]
    '('        [reduce using rule 6 (START)]

    stmts       go to state 21
    stmt        go to state 22
    flow        go to state 23
    declare     go to state 24
    assignment  go to state 25
    whether     go to state 26
    when        go to state 27
    from        go to state 28
    expr        go to state 29
    value       go to state 30
    list        go to state 31
    return      go to state 32
    ufunction   go to state 33
    funcall     go to state 34


State 3

    0 $accept: S $end •

    $default  accept


State 4

    5 START: START error •

    $default  reduce using rule 5 (START)


State 5

   27 from: FROM • '[' declare TO expr STEP expr ']' '{' stmts '}'

    '['  shift, and go to state 35


State 6

   25 when: WHEN • '[' condition ']' '{' stmts '}'
   26     | WHEN • '{' stmts '}' UNTIL '[' condition ']'

    '['  shift, and go to state 36
    '{'  shift, and go to state 37


State 7

   23 whether: WHETHER • '[' condition ']' THEN ':' '{' stmts '}'
   24        | WHETHER • '[' condition ']' THEN ':' '{' stmts '}' OTHERWISE ':' '{' stmts '}'

    '['  shift, and go to state 38


State 8

   58 return: RETURN • expr

    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    '('     shift, and go to state 20

    MINUS     [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    expr     go to state 40
    value    go to state 30
    list     go to state 31
    funcall  go to state 41


State 9

   59 ufunction: DEFINE • ID '(' symlist ')' '{' stmts '}'
   60          | DEFINE • ID '(' ')' '{' stmts '}'

    ID  shift, and go to state 42


State 10

   41 expr: MINUS • expr

    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    '('     shift, and go to state 20

    MINUS     [reduce using rule 45 (value)]
    ABS       [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    expr     go to state 43
    value    go to state 30
    list     go to state 31
    funcall  go to state 41


State 11

   40 expr: ABS • expr ABS

    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    '('     shift, and go to state 20

    MINUS     [reduce using rule 45 (value)]
    ABS       [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    expr     go to state 44
    value    go to state 30
    list     go to state 31
    funcall  go to state 41


State 12

   46 value: NUM •

    $default  reduce using rule 46 (value)


State 13

   47 value: BINARY •

    $default  reduce using rule 47 (value)


State 14

   48 value: ROMAN •

    $default  reduce using rule 48 (value)


State 15

   50 value: STR •

    $default  reduce using rule 50 (value)


State 16

   62 funcall: FUNC • '(' explist ')'

    '('  shift, and go to state 45


State 17

   19 declare: DATA_TYPE • ID init

    ID  shift, and go to state 46


State 18

   22 assignment: ID • ASSIGN expr
   49 value: ID •
   61 funcall: ID • '(' explist ')'

    ASSIGN  shift, and go to state 47
    '('     shift, and go to state 48

    $default  reduce using rule 49 (value)


State 19

   52 list: '[' • ']'
   53     | '[' • explist ']'

    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    ']'     shift, and go to state 49
    '('     shift, and go to state 20

    MINUS     [reduce using rule 45 (value)]
    ']'       [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    expr     go to state 50
    value    go to state 30
    list     go to state 31
    explist  go to state 51
    funcall  go to state 41


State 20

   42 expr: '(' • expr ')'

    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    '('     shift, and go to state 20

    MINUS     [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    expr     go to state 52
    value    go to state 30
    list     go to state 31
    funcall  go to state 41


State 21

    3 START: START stmts •

    $default  reduce using rule 3 (START)


State 22

    7 stmts: stmt • ';' stmts
    8      | stmt • ';'

    ';'  shift, and go to state 53


State 23

    9 stmts: flow • stmts
   10      | flow •

    FROM       shift, and go to state 5
    WHEN       shift, and go to state 6
    WHETHER    shift, and go to state 7
    RETURN     shift, and go to state 8
    MINUS      shift, and go to state 10
    ABS        shift, and go to state 11
    NUM        shift, and go to state 12
    BINARY     shift, and go to state 13
    ROMAN      shift, and go to state 14
    STR        shift, and go to state 15
    FUNC       shift, and go to state 16
    DATA_TYPE  shift, and go to state 17
    ID         shift, and go to state 18
    '['        shift, and go to state 19
    '('        shift, and go to state 20

    FROM       [reduce using rule 10 (stmts)]
    WHEN       [reduce using rule 10 (stmts)]
    WHETHER    [reduce using rule 10 (stmts)]
    RETURN     [reduce using rule 10 (stmts)]
    PLUS       reduce using rule 10 (stmts)
    PLUS       [reduce using rule 45 (value)]
    MINUS      [reduce using rule 10 (stmts)]
    MINUS      [reduce using rule 45 (value)]
    MUL        reduce using rule 10 (stmts)
    MUL        [reduce using rule 45 (value)]
    DIV        reduce using rule 10 (stmts)
    DIV        [reduce using rule 45 (value)]
    POW        reduce using rule 10 (stmts)
    POW        [reduce using rule 45 (value)]
    ABS        [reduce using rule 10 (stmts)]
    MOD        reduce using rule 10 (stmts)
    MOD        [reduce using rule 45 (value)]
    NUM        [reduce using rule 10 (stmts)]
    BINARY     [reduce using rule 10 (stmts)]
    ROMAN      [reduce using rule 10 (stmts)]
    STR        [reduce using rule 10 (stmts)]
    FUNC       [reduce using rule 10 (stmts)]
    DATA_TYPE  [reduce using rule 10 (stmts)]
    ID         [reduce using rule 10 (stmts)]
    ';'        reduce using rule 10 (stmts)
    ';'        [reduce using rule 45 (value)]
    '['        [reduce using rule 10 (stmts)]
    '('        [reduce using rule 10 (stmts)]
    $default   reduce using rule 10 (stmts)

    stmts       go to state 54
    stmt        go to state 22
    flow        go to state 23
    declare     go to state 24
    assignment  go to state 25
    whether     go to state 26
    when        go to state 27
    from        go to state 28
    expr        go to state 29
    value       go to state 30
    list        go to state 31
    return      go to state 32
    funcall     go to state 34


State 24

   11 stmt: declare •

    $default  reduce using rule 11 (stmt)


State 25

   12 stmt: assignment •

    $default  reduce using rule 12 (stmt)


State 26

   16 flow: whether •

    $default  reduce using rule 16 (flow)


State 27

   17 flow: when •

    $default  reduce using rule 17 (flow)


State 28

   18 flow: from •

    $default  reduce using rule 18 (flow)


State 29

   15 stmt: expr •
   34 expr: expr • PLUS expr
   35     | expr • MINUS expr
   36     | expr • MUL expr
   37     | expr • DIV expr
   38     | expr • POW expr
   39     | expr • MOD expr

    PLUS   shift, and go to state 55
    MINUS  shift, and go to state 56
    MUL    shift, and go to state 57
    DIV    shift, and go to state 58
    POW    shift, and go to state 59
    MOD    shift, and go to state 60

    $default  reduce using rule 15 (stmt)


State 30

   43 expr: value •

    $default  reduce using rule 43 (expr)


State 31

   51 value: list •

    $default  reduce using rule 51 (value)


State 32

   14 stmt: return •

    $default  reduce using rule 14 (stmt)


State 33

    4 START: START ufunction •

    $default  reduce using rule 4 (START)


State 34

   13 stmt: funcall •
   44 expr: funcall •

    ';'       reduce using rule 13 (stmt)
    ';'       [reduce using rule 44 (expr)]
    $default  reduce using rule 44 (expr)


State 35

   27 from: FROM '[' • declare TO expr STEP expr ']' '{' stmts '}'

    DATA_TYPE  shift, and go to state 17

    declare  go to state 61


State 36

   25 when: WHEN '[' • condition ']' '{' stmts '}'

    NOT     shift, and go to state 62
    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    '('     shift, and go to state 63

    MINUS     [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    condition  go to state 64
    expr       go to state 65
    value      go to state 30
    list       go to state 31
    funcall    go to state 41


State 37

   26 when: WHEN '{' • stmts '}' UNTIL '[' condition ']'

    FROM       shift, and go to state 5
    WHEN       shift, and go to state 6
    WHETHER    shift, and go to state 7
    RETURN     shift, and go to state 8
    MINUS      shift, and go to state 10
    ABS        shift, and go to state 11
    NUM        shift, and go to state 12
    BINARY     shift, and go to state 13
    ROMAN      shift, and go to state 14
    STR        shift, and go to state 15
    FUNC       shift, and go to state 16
    DATA_TYPE  shift, and go to state 17
    ID         shift, and go to state 18
    '['        shift, and go to state 19
    '('        shift, and go to state 20

    MINUS     [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    stmts       go to state 66
    stmt        go to state 22
    flow        go to state 23
    declare     go to state 24
    assignment  go to state 25
    whether     go to state 26
    when        go to state 27
    from        go to state 28
    expr        go to state 29
    value       go to state 30
    list        go to state 31
    return      go to state 32
    funcall     go to state 34


State 38

   23 whether: WHETHER '[' • condition ']' THEN ':' '{' stmts '}'
   24        | WHETHER '[' • condition ']' THEN ':' '{' stmts '}' OTHERWISE ':' '{' stmts '}'

    NOT     shift, and go to state 62
    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    '('     shift, and go to state 63

    MINUS     [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    condition  go to state 67
    expr       go to state 65
    value      go to state 30
    list       go to state 31
    funcall    go to state 41


State 39

   49 value: ID •
   61 funcall: ID • '(' explist ')'

    '('  shift, and go to state 48

    $default  reduce using rule 49 (value)


State 40

   34 expr: expr • PLUS expr
   35     | expr • MINUS expr
   36     | expr • MUL expr
   37     | expr • DIV expr
   38     | expr • POW expr
   39     | expr • MOD expr
   58 return: RETURN expr •

    PLUS   shift, and go to state 55
    MINUS  shift, and go to state 56
    MUL    shift, and go to state 57
    DIV    shift, and go to state 58
    POW    shift, and go to state 59
    MOD    shift, and go to state 60

    $default  reduce using rule 58 (return)


State 41

   44 expr: funcall •

    $default  reduce using rule 44 (expr)


State 42

   59 ufunction: DEFINE ID • '(' symlist ')' '{' stmts '}'
   60          | DEFINE ID • '(' ')' '{' stmts '}'

    '('  shift, and go to state 68


State 43

   34 expr: expr • PLUS expr
   35     | expr • MINUS expr
   36     | expr • MUL expr
   37     | expr • DIV expr
   38     | expr • POW expr
   39     | expr • MOD expr
   41     | MINUS expr •

    $default  reduce using rule 41 (expr)


State 44

   34 expr: expr • PLUS expr
   35     | expr • MINUS expr
   36     | expr • MUL expr
   37     | expr • DIV expr
   38     | expr • POW expr
   39     | expr • MOD expr
   40     | ABS expr • ABS

    PLUS   shift, and go to state 55
    MINUS  shift, and go to state 56
    MUL    shift, and go to state 57
    DIV    shift, and go to state 58
    POW    shift, and go to state 59
    ABS    shift, and go to state 69
    MOD    shift, and go to state 60


State 45

   62 funcall: FUNC '(' • explist ')'

    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    '('     shift, and go to state 20

    MINUS     [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    expr     go to state 50
    value    go to state 30
    list     go to state 31
    explist  go to state 70
    funcall  go to state 41


State 46

   19 declare: DATA_TYPE ID • init

    ASSIGN  shift, and go to state 71

    $default  reduce using rule 21 (init)

    init  go to state 72


State 47

   22 assignment: ID ASSIGN • expr

    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    '('     shift, and go to state 20

    MINUS     [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    expr     go to state 73
    value    go to state 30
    list     go to state 31
    funcall  go to state 41


State 48

   61 funcall: ID '(' • explist ')'

    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    '('     shift, and go to state 20

    MINUS     [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    expr     go to state 50
    value    go to state 30
    list     go to state 31
    explist  go to state 74
    funcall  go to state 41


State 49

   52 list: '[' ']' •

    $default  reduce using rule 52 (list)


State 50

   34 expr: expr • PLUS expr
   35     | expr • MINUS expr
   36     | expr • MUL expr
   37     | expr • DIV expr
   38     | expr • POW expr
   39     | expr • MOD expr
   54 explist: expr •
   55        | expr • ',' explist

    PLUS   shift, and go to state 55
    MINUS  shift, and go to state 56
    MUL    shift, and go to state 57
    DIV    shift, and go to state 58
    POW    shift, and go to state 59
    MOD    shift, and go to state 60
    ','    shift, and go to state 75

    $default  reduce using rule 54 (explist)


State 51

   53 list: '[' explist • ']'

    ']'  shift, and go to state 76


State 52

   34 expr: expr • PLUS expr
   35     | expr • MINUS expr
   36     | expr • MUL expr
   37     | expr • DIV expr
   38     | expr • POW expr
   39     | expr • MOD expr
   42     | '(' expr • ')'

    PLUS   shift, and go to state 55
    MINUS  shift, and go to state 56
    MUL    shift, and go to state 57
    DIV    shift, and go to state 58
    POW    shift, and go to state 59
    MOD    shift, and go to state 60
    ')'    shift, and go to state 77


State 53

    7 stmts: stmt ';' • stmts
    8      | stmt ';' •

    FROM       shift, and go to state 5
    WHEN       shift, and go to state 6
    WHETHER    shift, and go to state 7
    RETURN     shift, and go to state 8
    MINUS      shift, and go to state 10
    ABS        shift, and go to state 11
    NUM        shift, and go to state 12
    BINARY     shift, and go to state 13
    ROMAN      shift, and go to state 14
    STR        shift, and go to state 15
    FUNC       shift, and go to state 16
    DATA_TYPE  shift, and go to state 17
    ID         shift, and go to state 18
    '['        shift, and go to state 19
    '('        shift, and go to state 20

    FROM       [reduce using rule 8 (stmts)]
    WHEN       [reduce using rule 8 (stmts)]
    WHETHER    [reduce using rule 8 (stmts)]
    RETURN     [reduce using rule 8 (stmts)]
    PLUS       reduce using rule 8 (stmts)
    PLUS       [reduce using rule 45 (value)]
    MINUS      [reduce using rule 8 (stmts)]
    MINUS      [reduce using rule 45 (value)]
    MUL        reduce using rule 8 (stmts)
    MUL        [reduce using rule 45 (value)]
    DIV        reduce using rule 8 (stmts)
    DIV        [reduce using rule 45 (value)]
    POW        reduce using rule 8 (stmts)
    POW        [reduce using rule 45 (value)]
    ABS        [reduce using rule 8 (stmts)]
    MOD        reduce using rule 8 (stmts)
    MOD        [reduce using rule 45 (value)]
    NUM        [reduce using rule 8 (stmts)]
    BINARY     [reduce using rule 8 (stmts)]
    ROMAN      [reduce using rule 8 (stmts)]
    STR        [reduce using rule 8 (stmts)]
    FUNC       [reduce using rule 8 (stmts)]
    DATA_TYPE  [reduce using rule 8 (stmts)]
    ID         [reduce using rule 8 (stmts)]
    ';'        reduce using rule 8 (stmts)
    ';'        [reduce using rule 45 (value)]
    '['        [reduce using rule 8 (stmts)]
    '('        [reduce using rule 8 (stmts)]
    $default   reduce using rule 8 (stmts)

    stmts       go to state 78
    stmt        go to state 22
    flow        go to state 23
    declare     go to state 24
    assignment  go to state 25
    whether     go to state 26
    when        go to state 27
    from        go to state 28
    expr        go to state 29
    value       go to state 30
    list        go to state 31
    return      go to state 32
    funcall     go to state 34


State 54

    9 stmts: flow stmts •

    $default  reduce using rule 9 (stmts)


State 55

   34 expr: expr PLUS • expr

    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    '('     shift, and go to state 20

    MINUS     [reduce using rule 45 (value)]
    ABS       [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    expr     go to state 79
    value    go to state 30
    list     go to state 31
    funcall  go to state 41


State 56

   35 expr: expr MINUS • expr

    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    '('     shift, and go to state 20

    MINUS     [reduce using rule 45 (value)]
    ABS       [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    expr     go to state 80
    value    go to state 30
    list     go to state 31
    funcall  go to state 41


State 57

   36 expr: expr MUL • expr

    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    '('     shift, and go to state 20

    MINUS     [reduce using rule 45 (value)]
    ABS       [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    expr     go to state 81
    value    go to state 30
    list     go to state 31
    funcall  go to state 41


State 58

   37 expr: expr DIV • expr

    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    '('     shift, and go to state 20

    MINUS     [reduce using rule 45 (value)]
    ABS       [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    expr     go to state 82
    value    go to state 30
    list     go to state 31
    funcall  go to state 41


State 59

   38 expr: expr POW • expr

    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    '('     shift, and go to state 20

    MINUS     [reduce using rule 45 (value)]
    ABS       [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    expr     go to state 83
    value    go to state 30
    list     go to state 31
    funcall  go to state 41


State 60

   39 expr: expr MOD • expr

    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    '('     shift, and go to state 20

    MINUS     [reduce using rule 45 (value)]
    ABS       [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    expr     go to state 84
    value    go to state 30
    list     go to state 31
    funcall  go to state 41


State 61

   27 from: FROM '[' declare • TO expr STEP expr ']' '{' stmts '}'

    TO  shift, and go to state 85


State 62

   31 condition: NOT • condition

    NOT     shift, and go to state 62
    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    '('     shift, and go to state 63

    MINUS     [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    condition  go to state 86
    expr       go to state 65
    value      go to state 30
    list       go to state 31
    funcall    go to state 41


State 63

   32 condition: '(' • condition ')'
   42 expr: '(' • expr ')'

    NOT     shift, and go to state 62
    MINUS   shift, and go to state 10
    ABS     shift, and go to state 11
    NUM     shift, and go to state 12
    BINARY  shift, and go to state 13
    ROMAN   shift, and go to state 14
    STR     shift, and go to state 15
    FUNC    shift, and go to state 16
    ID      shift, and go to state 39
    '['     shift, and go to state 19
    '('     shift, and go to state 63

    MINUS     [reduce using rule 45 (value)]
    $default  reduce using rule 45 (value)

    condition  go to state 87
    expr       go to state 88
    value      go to state 30
    list       go to state 31
    funcall    go to state 41


State 64

   25 when: WHEN '[' condition • ']' '{' stmts '}'
   29 condition: condition • AND condition
   30          | condition • OR condition

    AND  shift, and go to state 89
    OR   shift, and go to state 90
    ']'  shift, and go to state 91


State 65

   28 condition: expr • CMP expr
   33          | expr •
   34 expr: expr • PLUS expr
   35     | expr • MINUS expr
   36     | expr • MUL expr
   37     | expr • DIV expr
   38     | expr • POW expr
   39     | expr • MOD expr

    PLUS   shift, and go to state 55
    MINUS  shift, and go to state 56
    MUL    shift, and go to state 57
    DIV    shift, and go to state 58
    POW    shift, and go to state 59
    MOD    shift, and go to state 60
    CMP    shift, and go to state 92

    $default  reduce using rule 33 (condition)


State 66

   26 when: WHEN '{' stmts • '}' UNTIL '[' condition ']'

    '}'  shift, and go to state 93


State 67

   23 whether: WHETHER '[' condition • ']' THEN ':' '{' stmts '}'
   24        | WHETHER '[' condition • ']' THEN ':' '{' stmts '}' OTHERWISE ':' '{' stmts '}'
   29 condition: condition • AND condition
   30          | condition • OR condition

    AND  shift, and go to state 89
    OR   shift, and go to state 90
    ']'  shift, and go to state 94


State 68
